    Bondarev via jlowe)

    HADOOP-9233. Cover package org.apache.hadoop.io.compress.zlib with unit
    tests (Vadim Bondarev via jlowe)

    HADOOP-9469. mapreduce/yarn source jars not included in dist tarball
    (Robert Parker via tgraves)

    HADOOP-9504. MetricsDynamicMBeanBase has concurrency issues in
    createMBeanInfo (Liang Xie via jlowe)

Release 0.23.7 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8849. FileUtil#fullyDelete should grant the target directories +rwx
    permissions (Ivan A. Veselovsky via bobby)

    HADOOP-9067. provide test for LocalFileSystem.reportChecksumFailure
    (Ivan A. Veselovsky via bobby)

    HADOOP-9336. Allow UGI of current connection to be queried. (Daryn Sharp
    via kihwal)

    HADOOP-9352. Expose UGI.setLoginUser for tests (daryn)

    HADOOP-9209. Add shell command to dump file checksums (Todd Lipcon via
    jeagles)

    HADOOP-9374. Add tokens from -tokenCacheFile into UGI (daryn)

    HADOOP-8711. IPC Server supports adding exceptions for which
    the message is printed and the stack trace is not printed to avoid chatter.
    (Brandon Li via Suresh)


  OPTIMIZATIONS

    HADOOP-8462. Native-code implementation of bzip2 codec. (Govind Kamat via
    jlowe)

  BUG FIXES

    HADOOP-9302. HDFS docs not linked from top level (Andy Isaacson via
    tgraves)

    HADOOP-9303. command manual dfsadmin missing entry for restoreFailedStorage
    option (Andy Isaacson via tgraves)

    HADOOP-9339. IPC.Server incorrectly sets UGI auth type (Daryn Sharp via 
    kihwal)

Release 0.23.6 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
    HADOOP-9217. Print thread dumps when hadoop-common tests fail.
    (Andrey Klochkov via suresh)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9072. Hadoop-Common-0.23-Build Fails to build in Jenkins 
    (Robert Parker via tgraves)

    HADOOP-8992. Enhance unit-test coverage of class HarFileSystem (Ivan A.
    Veselovsky via bobby)
